# neonhub-replit

./: .clinerules  .cursorrules  .cursorrules-seo-completion  .env  .eslintrc.cjs  .github-issue-kubernetes.md  .github-pr-body.md  .gitignore  .gitmodules  .npmrc  .npmrc.bak  .prettierignore  ACTIVATION_COMMANDS.sh  AGENTIC_ARCHITECTURE.md  AGENTIC_DELIVERY_SUMMARY.md  AGENTIC_IMPLEMENTATION_STATUS.md  AGENTIC_QUICKSTART.md  AGENTS.md  AGENT_COVERAGE.md  AGENT_INFRA_COMPLETION_REPORT.md  AGENT_INPUT_NORMALIZATION_NOTES.md  AGENT_TEST_RESULTS.md  AI_LOGIC_IMPLEMENTATION_COMPLETE.md  AI_LOGIC_QUICK_START.md  AI_LOGIC_TELEMETRY_FINAL_SUMMARY.md  ALL_WORKFLOWS_ANALYSIS_SUMMARY.md  API_TESTING_FILE_INDEX.md  API_VALIDATION_REPORT_TEMPLATE.md  AUDIT_INDEX_OCT30.md  AUDIT_REPORT.md  AUDIT_SUMMARY_FOR_STAKEHOLDERS.txt  AUDIT_SUMMARY_OCT30.txt  AUDIT_SUMMARY_OCT31.txt  AUTONOMOUS_AGENT_COMPLETION_SUMMARY.md  AUTONOMOUS_COMPLETION_REPORT_NOV3.md  AUTO_SYNC_FINAL_STATUS.md  AUTO_SYNC_FINAL_VERIFICATION.md  AUTO_SYNC_IMPLEMENTATION_COMPLETE.md  AUTO_SYNC_LAUNCH_REPORT.md  AUTO_SYNC_PRODUCTION_VERIFICATION.md  (+354 more)
.corepack/: lastKnownGood.json
.github/: CODEOWNERS  pull_request_template.md
.husky/: pre-commit  pre-push
.next/: trace
.pnpm-home/: pnpm 2
.tmp/: CODEX_CLOSEOUT.md  db-drift.sql  drift.sql  pkg-list.txt
Neon-v2.5.0/: .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  QUICKSTART.md  README.md  README_DEPLOYMENT.md  SECURITY.md  SETUP_COMPLETE.md  UPGRADE_COMPLETE.md  V0_INTEGRATION_GUIDE.md  VERSION.txt  docker-compose.yml  vercel.json
NeonUI-3.4/: README.md
agent-infra/: .gitignore  README.md  docker-compose.yml  package.json  tsconfig.base.json
artifacts_p0/: P0_PAST_VALIDATION_SUMMARY.md  executeAgentRun_refs.txt  files_presence 2.txt  legacy_agentjob_refs 2.txt  metrics_names_refs.txt  metrics_route_refs 2.txt  mock_connectors_files 2.txt  mock_flag_refs 2.txt  node 2.txt  p0_validation_raw.txt  promclient_refs.txt
artifacts_prod/: health.json  metrics 2.txt  web_head.txt
artifacts_prod_codex/: FINAL_VALIDATION_SUMMARY 2.md
artifacts_w2/: WEEK2_VALIDATION_SUMMARY 2.md  commit.txt  connector-creds.json
audit/: AUDIT_COMPLETION_REPORT.md  AUDIT_SUMMARY.txt  MANIFEST.txt  README.md  completion_scores.json  outsourcing_backlog.csv  risks.csv
backend/: ENV_TEMPLATE.md  jest.config.js  package-lock.json  package.json
ci/: db-deploy.hardening.md
config/: orchestrator-config.json
python/: README.md  environment-test.yml  environment.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
(+2012 files in other folders)
